[gd_scene load_steps=41 format=3 uid="uid://djauhd3r7aouy"]

[ext_resource type="Script" path="res://scripts/marriagefight.gd" id="1_7whit"]
[ext_resource type="Script" path="res://scripts/player_movement.gd" id="4_4hgy6"]
[ext_resource type="PackedScene" uid="uid://c6xtn86sydiqe" path="res://scenes/dziecko.tscn" id="4_8hw1r"]
[ext_resource type="PackedScene" uid="uid://by4k4n4ccw5v2" path="res://scenes/tentacle_monster.tscn" id="5_a1gb8"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="5_xcire"]
[ext_resource type="PackedScene" uid="uid://c728exa2uv1op" path="res://scenes/bulky.tscn" id="6_4bbpu"]
[ext_resource type="Texture2D" uid="uid://dq0mkuu6aa2yo" path="res://art/files/player_attack_right.png" id="6_xygo8"]
[ext_resource type="Texture2D" uid="uid://duvylkbvl0ifg" path="res://art/files/player_spirte_sheet.png" id="7_y6byg"]
[ext_resource type="Texture2D" uid="uid://cbj2i0jwgfgcf" path="res://art/files/player_spirte1.png" id="8_5u0i0"]
[ext_resource type="Shader" path="res://shaders/camera.gdshader" id="9_dmw2d"]
[ext_resource type="Texture2D" uid="uid://6c346jrxj10k" path="res://art/files/slash_sprite_sheet.png" id="10_juvsl"]
[ext_resource type="PackedScene" uid="uid://do3lybgg2ed64" path="res://scenes/arena.tscn" id="11_suecp"]
[ext_resource type="AudioStream" uid="uid://dbxpt0uh2jjsf" path="res://sounds/swing-whoosh-weapon-1-189819.mp3" id="12_hme4y"]
[ext_resource type="AudioStream" uid="uid://by8lpgc1vtypc" path="res://sounds/male_hurt7-48124.mp3" id="13_pg88s"]
[ext_resource type="Texture2D" uid="uid://codv6qcye1vpg" path="res://art/files/rooted.png" id="14_is47k"]
[ext_resource type="Texture2D" uid="uid://iqh8ikfsh7im" path="res://art/files/screamy.png" id="15_r4xxb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cei84"]
shader = ExtResource("5_xcire")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="AtlasTexture" id="AtlasTexture_cjduf"]
atlas = ExtResource("6_xygo8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y54g"]
atlas = ExtResource("6_xygo8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twnwk"]
atlas = ExtResource("6_xygo8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufy42"]
atlas = ExtResource("6_xygo8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fabqk"]
atlas = ExtResource("7_y6byg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fk7x"]
atlas = ExtResource("7_y6byg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw486"]
atlas = ExtResource("7_y6byg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq3v8"]
atlas = ExtResource("7_y6byg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucvml"]
atlas = ExtResource("7_y6byg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_thaew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjduf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y54g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twnwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufy42")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fabqk")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fk7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw486")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq3v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucvml")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_04qdk"]
colors = PackedColorArray(0, 0, 0, 0.713726, 0, 0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5no5"]
size = Vector2(10, 25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2harc"]
shader = ExtResource("9_dmw2d")
shader_parameter/resolution = Vector2(480, 480)
shader_parameter/scan_line_amount = 0.022
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.023
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 1.0
shader_parameter/vignette_intensity = 0.5
shader_parameter/aberation_amount = 0.815
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 3.8e-07
shader_parameter/scan_line_strength = -1.0
shader_parameter/pixel_strength = 0.0

[sub_resource type="Gradient" id="Gradient_lpaw8"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gqggf"]
gradient = SubResource("Gradient_lpaw8")

[sub_resource type="AtlasTexture" id="AtlasTexture_87rd3"]
atlas = ExtResource("10_juvsl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrt3g"]
atlas = ExtResource("10_juvsl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70jut"]
atlas = ExtResource("10_juvsl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukgdn"]
atlas = ExtResource("10_juvsl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuhl6"]
atlas = ExtResource("10_juvsl")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jg86k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87rd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrt3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70jut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukgdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuhl6")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rk2fx"]
radius = 29.0172

[sub_resource type="Curve" id="Curve_hwcgp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Arena" type="Node2D"]
script = ExtResource("1_7whit")

[node name="DZIECKO" parent="." instance=ExtResource("4_8hw1r")]
position = Vector2(1, -124.395)
hp = 70

[node name="Tentacle Monster" parent="." instance=ExtResource("5_a1gb8")]
position = Vector2(-34, -83.34)
hp = 70

[node name="Bulky" parent="." instance=ExtResource("6_4bbpu")]
position = Vector2(60, -83.34)

[node name="Player" type="RigidBody2D" parent="." groups=["player"]]
position = Vector2(16, 5)
gravity_scale = 0.0
lock_rotation = true
linear_damp = 21.257
script = ExtResource("4_4hgy6")
movement_speed = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
material = SubResource("ShaderMaterial_cei84")
sprite_frames = SubResource("SpriteFrames_thaew")
animation = &"stand"
autoplay = "stand"

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/AnimatedSprite2D"]
z_index = -1
emitting = false
amount = 50
lifetime = 0.25
texture = ExtResource("8_5u0i0")
gravity = Vector2(0, 0)
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_04qdk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_e5no5")

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_left = -400
limit_top = -400
limit_right = 400
limit_bottom = 400

[node name="Sprite2D" type="Sprite2D" parent="Player/Camera2D"]
z_index = 5
material = SubResource("ShaderMaterial_2harc")
position = Vector2(-2.50001, -1)
scale = Vector2(327, 194)
texture = SubResource("GradientTexture1D_gqggf")

[node name="pivot" type="Node2D" parent="Player"]

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Player/pivot"]
position = Vector2(13, -1)
sprite_frames = SubResource("SpriteFrames_jg86k")

[node name="Area2D" type="Area2D" parent="Player/pivot/AnimatedSprite2D2"]
position = Vector2(-13, 1)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/pivot/AnimatedSprite2D2/Area2D"]
position = Vector2(12, -1)
shape = SubResource("CircleShape2D_rk2fx")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player"]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 24.2
initial_velocity_max = 137.1
linear_accel_max = 46.77
scale_amount_max = 9.07
scale_amount_curve = SubResource("Curve_hwcgp")
color = Color(0, 0, 0, 1)

[node name="Slash" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("12_hme4y")

[node name="damaged" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("13_pg88s")
volume_db = -7.2

[node name="tentacls" type="Sprite2D" parent="Player"]
visible = false
position = Vector2(3, -1)
scale = Vector2(0.625, 0.640625)
texture = ExtResource("14_is47k")

[node name="screamy" type="Sprite2D" parent="Player"]
visible = false
scale = Vector2(0.8, 0.8)
texture = ExtResource("15_r4xxb")

[node name="Arena" parent="." instance=ExtResource("11_suecp")]
position = Vector2(-14, -6)

[connection signal="die" from="DZIECKO" to="." method="_on_dziecko_die"]
[connection signal="die" from="Tentacle Monster" to="." method="_on_tentacle_monster_die"]
[connection signal="die" from="Bulky" to="." method="_on_bulky_die"]
[connection signal="animation_finished" from="Player/pivot/AnimatedSprite2D2" to="Player" method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="body_entered" from="Player/pivot/AnimatedSprite2D2/Area2D" to="Player" method="_on_area_2d_body_entered"]
